Quiz: fix animations for webkit, fix button bar position for webkit, center logo (with pad in mind, is off center on desktop), and add sending of emails on submit

--- a/wordpress/themes/nbeat.3/src/sass/modules/_quiz.scss
+++ b/wordpress/themes/nbeat.3/src/sass/modules/_quiz.scss
@@ -66,21 +66,9 @@
         max-height: 100vh;
         position: relative;
         overflow: hidden;
-        // padding-top: 60px;
 
         &.is-active {
             left: 0;
-            
-            /* &:before { */
-            /*     position: absolute; */
-            /*     content: attr(data-debug); */
-            /*     text-transform: uppercase; */
-            /*     top: 50px; */
-            /*     right: 0; */
-            /*     font-size: 0.7rem; */
-            /*     padding: 0.3rem 0.7rem;; */
-            /*     background-color: darken(map-get($_colors, "blue"), 10%); */
-            /* } */
 
             .page-button-bar {
                 position: fixed;
@@ -95,7 +83,7 @@
             padding: 7vmin;
             background-color: map-get($_colors, "blue");
             z-index: 300;
-
+            
             @include nb_flex();
             @include nb_flex_wrap(nowrap);
             @include nb_flex-align-items();
@@ -114,12 +102,18 @@
         @include nb_flex-direction(column);
 
         img {
+            position: relative;
+            top: -5%;
             height: 90vmin;
             z-index: 200;
             animation-name: spin, spin-out;
             animation-duration: 6s, 2.5s;
             animation-iteration-count: infinite, 1;
             animation-timing-function: linear, cubic-bezier(0.9, 0.1, 0.9, 0.1);
+            -webkit-animation-name: spin, spin-out;
+            -webkit-animation-duration: 6s, 2.5s;
+            -webkit-animation-iteration-count: infinite, 1;
+            -webkit-animation-timing-function: linear, cubic-bezier(0.9, 0.1, 0.9, 0.1);
         }
 
         .result {
@@ -140,6 +134,11 @@
                 animation-iteration-count: 1;
                 animation-timing-function: cubic-bezier(0.9, 0.1, 0.9, 0.1);
                 animation-fill-mode: forwards;
+                -webkit-animation-name: score-size;
+                -webkit-animation-duration: 2.5s;
+                -webkit-animation-iteration-count: 1;
+                -webkit-animation-timing-function: cubic-bezier(0.9, 0.1, 0.9, 0.1);
+                -webkit-animation-fill-mode: forwards;
             }
 
             .total {
@@ -150,9 +149,14 @@
                 animation-timing-function: cubic-bezier(0.9, 0.1, 0.9, 0.1);
                 animation-fill-mode: forwards;
                 font-size: 2vmin;
+                -webkit-animation-name: total-size;
+                -webkit-animation-duration: 5s;
+                -webkit-animation-iteration-count: 1;
+                -webkit-animation-timing-function: cubic-bezier(0.9, 0.1, 0.9, 0.1);
+                -webkit-animation-fill-mode: forwards;
                 
                 div {
-                    margin-top: 2rem;
+                    margin-top: 1rem;
                 }
             }
         }
@@ -165,9 +169,12 @@
         @include nb_flex-direction(column);
 
         img {
-            height: 50vmin;
+            position: relative;
+            top: -5%;
+            height: 60vmin;
             z-index: 200;
             animation: spin 3s infinite cubic-bezier(.95,.41,.27,.76);
+            -webkit-animation: spin 3s infinite cubic-bezier(.95,.41,.27,.76);
             margin-bottom: 20vmin;
             /* -webkit-animation: spin 3s infinite linear; */
             /* -moz-animation: spin 3s infinite linear; */
@@ -242,27 +249,43 @@
             margin-bottom: 2rem;
 
             label {
-                width: 20%;
+                width: 30%;
                 display: block;
                 margin-bottom: 0;
+                
+                @include media-breakpoint-up(md) {
+                    width: 20%;
+                }
             }
 
             input {
-                width: 75%;
+                width: 70%;
                 background: transparent;
                 border: 0;
                 border-bottom: 2px dotted #fff;
                 padding: 0;
                 border-radius: 0;
                 color: #fff;
+
+                @include media-breakpoint-up(md) {
+                    width: 75%;
+                }
             }
         }
     }
 }
 
 @include keyframes(spin) {
-    0% { transform: rotate(360deg);}
-    100% { transform: rotate(0deg);}
+    0% {
+        -webkit-transform: rotate(360deg);
+        -ms-transform: rotate(360deg);
+        transform: rotate(360deg);
+    }
+    100% {
+        -webkit-transform: rotate(0deg);
+        -ms-transform: rotate(0deg);
+        transform: rotate(0deg);
+    }
 }
 
 @include keyframes(spin-out) {
